--- a/restaurant-app-client/src/styles.css
+++ b/restaurant-app-client/src/styles.css
@@ -97,7 +97,7 @@ body {
   margin: 5px;
 }
 
-.order-card, .item-card {
+.home-card:not(#id-selector), .order-card, .item-card {
   cursor: pointer;
 }
 
