--- a/restaurant-app-client/src/app/order/order.component.css
+++ b/restaurant-app-client/src/app/order/order.component.css
@@ -1,68 +1,85 @@
 #error {
-  color: red;
-  text-align: center;
-  margin-top: 20px;
+    color: red;
+    text-align: center;
+    margin-top: 20px;
 }
 
 #order-details {
-  max-width: 600px;
-  margin: 40px auto;
-  background: #fff;
-  padding: 24px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  font-family: sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    margin: 40px auto;
+    background: #fff;
+    padding: 24px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: sans-serif;
 }
 
 .active {
-  color: green;
+    color: green;
 }
 
 .inactive {
-  color: gray;
+    color: gray;
 }
 
 .dish-list {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-  margin: 16px 0;
-  gap: 16px;
-  list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 16px 0;
+    gap: 16px;
+    list-style-type: none;
 }
 
 .dish-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 120px;
+}
+
+.image-wrapper {
+    width: 120px;
+    height: 100px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    margin-bottom: 8px;
 }
 
 .dish-thumbnail {
-  border-radius: 8px;
-  margin-bottom: 8px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Сохраняет пропорции, обрезая по контейнеру */
+    object-position: center; /* Центрирует по горизонтали и вертикали */
 }
 
 .back-button,
 .close-order-button {
-  display: inline-block;
-  margin: 10px 8px 0 0;
-  padding: 10px 20px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 14px;
-  transition: background-color 0.3s ease;
+    display: inline-block;
+    margin: 10px 8px 0 0;
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
 }
 
 .close-order-button[disabled] {
-  background-color: #ccc;
-  cursor: not-allowed;
+    background-color: #ccc;
+    cursor: not-allowed;
 }
 
 .back-button:hover,
 .close-order-button:not([disabled]):hover {
-  background-color: #45a049;
+    background-color: #45a049;
 }
+
